--- a/kanban-board/public/global.css
+++ b/kanban-board/public/global.css
@@ -2,6 +2,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
+:root {
+	--primary-color: #F77F00;
+	--hover-primary-color: #DB7100;
+	--dialog-bg-color: #fdf9f6;
+	--cancel-color: #ccc;
+} 
+
 html, body {
 	position: relative;
 	width: 100%;
@@ -18,19 +25,6 @@ body {
 	font-family: Montserrat, serif;
 }
 
-a {
-	color: rgb(0,100,200);
-	text-decoration: none;
-}
-
-a:hover {
-	text-decoration: underline;
-}
-
-a:visited {
-	color: rgb(0,80,160);
-}
-
 label {
 	display: block;
 }
@@ -45,24 +39,6 @@ input, button, select, textarea {
 	border-radius: 2px;
 }
 
-input:disabled {
-	color: #ccc;
-}
-
-button {
-	color: #333;
-	background-color: #f4f4f4;
-	outline: none;
-}
-
-button:disabled {
-	color: #999;
-}
-
-button:not(:disabled):active {
-	background-color: #ddd;
-}
-
-button:focus {
-	border-color: #666;
+button:hover {
+	cursor: pointer;
 }
