--- a/kanban-board/public/global.css
+++ b/kanban-board/public/global.css
@@ -6,10 +6,12 @@ html, body {
 	position: relative;
 	width: 100%;
 	height: 100%;
+	font-size: 100%;
 }
 
 body {
 	color: #333;
+	background-color: black;
 	margin: 0;
 	padding: 8px;
 	box-sizing: border-box;
